# router/system/sys_router.go
@@ -16,12 +16,16 @@ func SysBaseRouter(r *gin.RouterGroup) {
 func SysNoCheckRoleRouter(r *gin.RouterGroup) {
 	v1 := r.Group("/api/v1")
 
+	// 获取验证码
 	v1.GET("/getCaptcha", system.GenerateCaptchaHandler)
+	// 注册
+	v1.POST("/register", system.RegisterSysUser)
 }
 
 func RegisterSysUserRouter(v1 *gin.RouterGroup, authMiddleware *jwt.GinJWTMiddleware) {
 	sysuser := v1.Group("/sysUser").Use(authMiddleware.MiddlewareFunc())
 	{
 		sysuser.POST("", system.InsertSysUser)
+		sysuser.GET("/:userId", system.GetSysUser)
 	}
 }
